--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: ruby
-script: 
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
+script:
+  - bin/rake db:migrate RAILS_ENV=test
+  - bin/rake
