--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
+env:
+  - DB=sqlite
 script:
-  - bin/rake db:test:prepare
-  - bin/rake db:migrate RAILS_ENV=test
-  - bin/rake
+  - export RAILS_ENV=test
+  - bundle exec rake db:create db:migrate
+  - bundle exec rake db:test:prepare
