--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ env:
 script:
   - export RAILS_ENV=test
   - bundle exec rake db:create db:migrate
+  - bundle exec rake db:seed
   - bundle exec rake db:test:prepare
